<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_viewtasksEmployer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homescreen"
    tools:context=".EmployerHomepageActivity">

    <TextView
...
            app:layout_constraintTop_toBottomOf="@+id/button_homepageSubmitTask"
            app:layout_constraintVertical_bias="0.0"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="3sp" />

        <Button
            android:id="@+id/button_viewMyTasksEmployer"
            style="@style/Widget.App.Button"
            android:layout_width="300sp"
            android:layout_height="65sp"
            android:background="#000000"
            android:backgroundTint="#00D3A9"
            android:fontFamily="@font/questrial"
...
